--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.tp1_pmr" >
+    package="com.example.tp2_pmr" >
 
     <application
         android:allowBackup="true"
@@ -14,16 +14,16 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31" >
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name="com.example.tp2_pmr.activities.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.ShowListActivity"
+            android:name="com.example.tp2_pmr.activities.ShowListActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.ChoixListActivity"
+            android:name="com.example.tp2_pmr.activities.ChoixListActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.example.tp2_pmr.activities.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
